--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&family=Megrim&display=swap" rel="stylesheet">
-	<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+	<link href="assets/css/style.css" rel="stylesheet" type="text/css">
 	<title>WonderList</title>
 </head>
 
@@ -32,7 +32,7 @@
 				</ul>
 			</div>
 			<a class="navbar-brand"
-				href="index.html">WonderList<img src="https://img.icons8.com/dusk/64/000000/world-map.png"/ alt="WonderList"></a>
+				href="index.html">WonderList<img src="https://img.icons8.com/dusk/64/000000/world-map.png" alt="WonderList"></a>
 		</nav>
 	</header>
 
@@ -40,7 +40,7 @@
 		<section class="container-fluid">
 			<div class="row no-gutters" id="intro">
 				<div class="col-sm d-none d-lg-block image-container">
-					<img id="intro-image" src="assets/images/travel is good.jpg">
+					<img id="intro-image" src="assets/images/travel_is_good.jpg" alt="Intro image">
                 </div>
 				<div class="col text-container">
 				    <h1 id="intro-text-title">World Heritage Sites – treasures that belong to all humanity</h1>
@@ -60,7 +60,8 @@
             </div> 
         </section> 
 		<section id="syndication" class="container-fluid">
-			<div id="">
+        <h6>Disclaimer</h6>
+			<div>
 				<p>
 					Copyright © 1992 - 2020 UNESCO/World Heritage Centre. All rights reserved.<br>
 				</p>
@@ -75,19 +76,19 @@
 			</div>
 			<div class="col-sm  social">
 				<a target="_blank" rel="noopener" href="https://www.instagram.com/unescoworldheritage/">
-					<img src="https://img.icons8.com/cute-clipart/64/000000/instagram-new.png"/>
+					<img src="https://img.icons8.com/cute-clipart/64/000000/instagram-new.png" alt="link to Instagram">
 					<span class="sr-only">Instagram</span>
 				</a>
 				<a target="_blank" rel="noopener" href="https://www.tripadvisor.co.uk/">
-					<img src="https://img.icons8.com/color/48/000000/tripadvisor.png"/>
+					<img src="https://img.icons8.com/color/48/000000/tripadvisor.png" alt="link to Tripadvisor">
 					<span class="sr-only">Tripadvisor</span>
 				</a>
 				<a target="_blank" rel="noopener" href="http://whc.unesco.org/">
-					<img src="https://img.icons8.com/nolan/64/unesco.png"/>
+					<img src="https://img.icons8.com/nolan/64/unesco.png" alt="link to Unesco">
 					<span class="sr-only">UNESCO</span>
 				</a>
 				<a target="_blank" rel="noopener" href="https://www.google.com">
-					<img src="https://img.icons8.com/cute-clipart/64/000000/google-logo.png"/>
+					<img src="https://img.icons8.com/cute-clipart/64/000000/google-logo.png" alt="link to Google">
 					<span class="sr-only">Google</span>
 				</a>
 			</div>
@@ -99,7 +100,6 @@
 
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
 		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-	</script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
 	</script>
